adding a few more tests for Conditions